[Fix] fix portfolio registering for portfolio graph test